--- a/QR-Coder-Decoder/Base.lproj/Main.storyboard
+++ b/QR-Coder-Decoder/Base.lproj/Main.storyboard
@@ -38,21 +38,44 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AHx-7M-2OF">
+                                        <rect key="frame" x="150" y="243" width="300" height="300"/>
+                                        <color key="backgroundColor" red="1" green="0.42949757024080204" blue="0.33904188744587982" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="300" id="8ia-3L-KHs"/>
+                                            <constraint firstAttribute="width" constant="300" id="Z1m-l1-iix"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMj-79-lCc">
+                                        <rect key="frame" x="265" y="108" width="70" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="AcI-YY-B6j"/>
+                                            <constraint firstAttribute="width" constant="70" id="Avq-93-v8R"/>
+                                        </constraints>
+                                        <state key="normal" title="Code Text"/>
+                                        <connections>
+                                            <action selector="codeTextAction:" destination="9pv-A4-QxB" eventType="touchUpInside" id="U4l-hv-ska"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="OHp-bK-hHx" secondAttribute="trailing" constant="20" id="98X-W2-VHo"/>
                                     <constraint firstItem="OHp-bK-hHx" firstAttribute="leading" secondItem="Ii4-Yr-1Fe" secondAttribute="leading" constant="20" id="ANy-AS-SGj"/>
                                     <constraint firstItem="Pzy-ch-gRf" firstAttribute="centerX" secondItem="Ii4-Yr-1Fe" secondAttribute="centerX" id="Kra-SA-lIk"/>
                                     <constraint firstItem="Pzy-ch-gRf" firstAttribute="leading" secondItem="Ii4-Yr-1Fe" secondAttribute="leading" constant="20" id="PyN-IG-Yhh"/>
+                                    <constraint firstItem="vMj-79-lCc" firstAttribute="centerX" secondItem="Ii4-Yr-1Fe" secondAttribute="centerX" id="Qww-3e-NOt"/>
                                     <constraint firstItem="OHp-bK-hHx" firstAttribute="top" secondItem="Pzy-ch-gRf" secondAttribute="bottom" constant="8" id="Rw1-4k-n7X"/>
                                     <constraint firstItem="Pzy-ch-gRf" firstAttribute="top" secondItem="Ii4-Yr-1Fe" secondAttribute="top" constant="28" id="bPE-iT-I6C"/>
+                                    <constraint firstItem="AHx-7M-2OF" firstAttribute="centerX" secondItem="Ii4-Yr-1Fe" secondAttribute="centerX" id="jcg-9h-a47"/>
                                     <constraint firstAttribute="trailing" secondItem="Pzy-ch-gRf" secondAttribute="trailing" constant="20" id="jqk-HW-Jpf"/>
+                                    <constraint firstItem="vMj-79-lCc" firstAttribute="top" secondItem="OHp-bK-hHx" secondAttribute="bottom" constant="8" id="kqd-WX-uDC"/>
                                     <constraint firstAttribute="bottom" secondItem="OHp-bK-hHx" secondAttribute="bottom" constant="451" id="mGv-Ci-8vl"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="AHx-7M-2OF" secondAttribute="bottom" constant="8" id="1f7-q8-b3Z"/>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="Ii4-Yr-1Fe" secondAttribute="bottom" id="Uog-JS-Bjc"/>
                             <constraint firstItem="Ii4-Yr-1Fe" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leading" id="dNM-w7-EbY"/>
                             <constraint firstAttribute="trailing" secondItem="Ii4-Yr-1Fe" secondAttribute="trailing" id="e6z-kx-V8s"/>
@@ -60,6 +83,10 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Coder" image="first" id="acW-dT-cKf"/>
+                    <connections>
+                        <outlet property="qrImage" destination="AHx-7M-2OF" id="zW9-nJ-gW8"/>
+                        <outlet property="textField" destination="OHp-bK-hHx" id="Jcx-8R-n4C"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -96,7 +123,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-DH-RTG">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2UX-DH-RTG">
                                 <rect key="frame" x="214" y="485" width="172" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="nuL-Cn-FGF"/>
@@ -114,6 +141,7 @@
                             <constraint firstAttribute="trailing" secondItem="TsR-F7-lYG" secondAttribute="trailing" constant="20" id="ClX-g8-Ok9"/>
                             <constraint firstItem="1pf-gu-aza" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" constant="8" id="ItK-4C-yPS"/>
                             <constraint firstItem="1pf-gu-aza" firstAttribute="trailing" secondItem="QS5-Rx-YEW" secondAttribute="trailingMargin" id="J59-7Y-k6N"/>
+                            <constraint firstItem="2UX-DH-RTG" firstAttribute="top" secondItem="TsR-F7-lYG" secondAttribute="bottom" constant="-45" id="NPc-rg-M6K"/>
                             <constraint firstItem="TsR-F7-lYG" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" constant="20" id="ULg-19-3nG"/>
                             <constraint firstItem="hvS-DS-fFr" firstAttribute="top" secondItem="1pf-gu-aza" secondAttribute="bottom" constant="8" id="W2w-r8-VfX"/>
                             <constraint firstItem="hvS-DS-fFr" firstAttribute="leading" secondItem="QS5-Rx-YEW" secondAttribute="leading" constant="20" id="Xj0-of-71N"/>
